# example-rust-web-api

./: Cargo.toml  Dockerfile  README.md
app/: Cargo.toml  run.sh
app/connection_pool/: Cargo.toml
app/connection_pool/src/: lib.rs
app/src/: lib.rs  main.rs
app/src/utils/: set_db.rs
app/user/: Cargo.toml
app/user/src/: lib.rs
app/user/src/driver/: db_driver.rs  model.rs
app/user/src/gateway/: user.rs
app/user/src/port/: user.rs
app/user/src/rest/: user.rs
app/user/src/usecase/: user.rs
db/: build_and_run.sh
db/initdb/: 02_create_table.sql
src/: driver.rs  gateway.rs  lib.rs  main.rs
src/domain/: member.rs  user.rs
src/driver/: db_driver.rs  model.rs  user_driver.rs
src/gateway/: member.rs  user.rs  user_gateway.rs
src/port/: member.rs  user.rs
src/rest/: member.rs  user.rs
src/usecase/: member.rs  user.rs  user_usecase.rs
src/utils/: log.rs  set_db.rs
