[package]
name = "app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "user",
  "connection_pool"
]

[dependencies]
actix-web = "4.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"

user = { path = "./user" }
connection_pool = { path = "./connection_pool" }
uuid = {version = "1.2.1", features = ["v4"]}
