[package]
name = "connection_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
async-trait = "0.1.58"
mry = "0.2.5"
serde = { version = "1.0.147", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.21.2", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
envy = "0.4"
once_cell = "1.16.0"

